--- a/localisation/EU4_l_english.yml
+++ b/localisation/EU4_l_english.yml
@@ -183,7 +183,7 @@
  blockaded:0 "Blockaded"
  SEND_OFFICERS_MARCH_TOO_BIG:0 "You can't send officers to a subject that has more than $PERC|Y$ of your development. They need to be less than $VAL|Y$ development."
  LEDGER_SCORE_AG:0 "Score through Ages"
- RELIGIOUS_CONFLICT_RULES_ON:0 "§YReligious Conflicts§!\n- Crusades can be called by the Papal Controller.\n- Catholic rulers can be excommunicated.\n- Reformation Centers can appear.\n- Religion impact diplomacy."
+ RELIGIOUS_CONFLICT_RULES_ON:0 "§YReligious Conflicts§!\n- Crusades can be called by the Episcopal Controller.\n- Liemarian rulers can be excommunicated.\n- Reformation Centers can appear.\n- Religion impact diplomacy."
  RELIGIOUS_CONFLICT_RULES_OFF:0 "This age has no special religious conflict. Reformation Centers are gone, there is no crusades being called, the Pope cannot excommunicate."
  ABSOLUTISM_RULES_ON:0 "§YAbsolutism§!\nGovernments can become more absolute in this era, giving greater control of the state."
  ABSOLUTISM_RULES_OFF:0 "In later ages, absolutism will be a factor which impacts on much control the ruler has over the state."
@@ -2493,7 +2493,7 @@
  VOTE_ON_CARDINAL:0 "Spend Papal Influence to vote for this future cardinal."
  VOTE_ONE_ON_CARDINAL:0 "§YLeft click§! to spend $PI|R$ point of Papal Influence to add $PI|G$ vote for this future cardinal."
  CANT_VOTE_ON_CARDINAL:0 "You need at least $PI|Y$ point(s) of Papal Influence to vote for this cardinal."
- ACTIVE_CARDINALS:0 "The country that has the most loyal active cardinals will be the papal controller."
+ ACTIVE_CARDINALS:0 "The country that has the most loyal active cardinals will be the Episcopal controller."
  FUTURE_CARDINALS:0 "When an active cardinal dies, a random one of future cardinals will be chosen to be an active cardinal. The cardinal will be loyal to the one who has spent the most points on him."
  CARDINAL_CONTROLLER:0 "$COUNTRY$ ($VAL$)"
  PAPAL_INFLUENCE_DESC:0 "Papal Influence represents our influence with the Holy Father. This can be spent on future cardinals to make them loyal to us when they one day become active cardinals."
@@ -2503,7 +2503,7 @@
  PAPAL_CURIA_TREASURY_NOT_ENOUGH:0 "§RYou need at least $COST|Y0$¤ Curia Treasury Available to take this action.§!"
  PAPAL_COST:1 "Costs $COST|Y0$ Papal Influence.\n"
  PAPAL_CURIA_TREASURY_COST:0 "Costs $COST|Y0$¤ from the Curia Treasury.\n"
- PAPAL_INVEST:0 "Spend §Y$MOD_COST$§W Papal Influence to gain §Y$COST$§W Invested influence towards becoming the next Papal Controller."
+ PAPAL_INVEST:0 "Spend §Y$MOD_COST$§W Papal Influence to gain §Y$COST$§W Invested influence towards becoming the next Episcopal Controller."
  SORT_BY_SIZE:0 "Sort by the size of the army"
  SORT_BY_MORALE:0 "Sort by the morale of the army"
  SORT_BY_LOCATION:0 "Sort by the army's location"
