--- a/localisation/core_l_english.yml
+++ b/localisation/core_l_english.yml
@@ -257,7 +257,7 @@
  alert_max_loans_instant:0 "§YYou have reached your maximum number of allowed loans§!"
  alert_max_loans_delayed:0 ""
  BOOST_FACTION_TT:0 "Spend §Y$POW$§! $TYPE$ power to get §G+$VAL$§! influence to $FACTION$."
- PAPAL_STATE_NO_INFLUENCE:0 "The Pope does not get Papal Influence or Cardinals, but instead gains investment towards becoming Papal Controller based on the total number of cardinals."
+ PAPAL_STATE_NO_INFLUENCE:0 "The Episcopus does not get Episcopal Influence or Cardinals, but instead gains investment towards becoming Episcopal Controller based on the total number of cardinals."
  EXPENSEDIPLOMATIC:0 "Diplomatic Expenses"
  NO_EXPENSESUPPORTREBELS:0 "We don't have any expenses for supporting rebels."
  WAR_OVERVIEW_NOT_FULL_ALLY:0 "§Y$COUNTRY$§! is not a co-belligerent in this war, so taking provinces from them will cost twice as much."
@@ -309,7 +309,7 @@
  EMBRACE_INSTI_COST:2 "Embracing $NAME|Y$ will cost $COST|Y$¤."
  MANAGE_OVEREXTENSION:0 "Manage Overextension"
  EMPEROR_DIPACTIONS_DESC:0 "\nThe Emperor may take the following diplomatic actions: \n$LIST|Y$"
- PAPAL_CONTROLLER_DIPACTIONS_DESC:0 "The Papal controller may take the following diplomatic actions: \n$LIST|Y$"
+ PAPAL_CONTROLLER_DIPACTIONS_DESC:0 "The Episcopal controller may take the following diplomatic actions: \n$LIST|Y$"
  PAPACY_NEXT_CARDINALS:0 "§YNext Possible Cardinals§W"
  UNIT_UNLOCKED_AT_TECH:0 "'$UNIT|Y$' unlocked at $TECH$ ($LEVEL$)."
  UNIT_REORG_TRANSFER:0 "Click to transfer all units of this type.\nRight-click to transfer half of all units of this type."
