--- a/localisation/messages_l_english.yml
+++ b/localisation/messages_l_english.yml
@@ -3351,17 +3351,17 @@
  OTHERMILALLDISHONOUR_BTN1:0 "$RECIPIENT$ refused to join $ACTOR$s war against $TARGETLIST$."
  OTHERMILALLDISHONOUR_BTN2:0 "OK"
  OTHERMILALLDISHONOUR_BTN3:0 "Go to"
- CURIACONTROLLER_TITLE:0 "Became Papal Controller"
- CURIACONTROLLER_SETUP:0 "When we become the new Papal Controller."
+ CURIACONTROLLER_TITLE:0 "Became Episcopal Controller"
+ CURIACONTROLLER_SETUP:0 "When we become the new Episcopal Controller."
  CURIACONTROLLER_HEADER:0 "News from the Holy See"
  CURIACONTROLLER_1:0 "A Wise Choice"
- CURIACONTROLLER_2:0 "The Papal Conclave has elected"
+ CURIACONTROLLER_2:0 "The Episcopal Conclave has elected"
  CURIACONTROLLER_3:0 "$POPE$"
  CURIACONTROLLER_4:0 "He is loyal to us, and we are now the"
- CURIACONTROLLER_5:0 "PAPAL CONTROLLER"
+ CURIACONTROLLER_5:0 "EPISCOPAL CONTROLLER"
  CURIACONTROLLER_6:0 "A magnificent day for our nation!"
  CURIACONTROLLER_7:0 "$EFFECT$"
- CURIACONTROLLER_LOG:0 "We are the new Papal Controller."
+ CURIACONTROLLER_LOG:0 "We are the new Episcopal Controller."
  CURIACONTROLLER_BTN1:0 "OK"
  CURIACONTROLLER_BTN2:0 "OK"
  CURIACONTROLLER_BTN3:0 "Go to"
@@ -4651,39 +4651,39 @@
  OWNTRADEALLOW_LOG:0 "We have opened our provinces to the merchants from $RECIPIENT$."
  TRADEALLOW_LOG:0 "$ACTOR$ allows our merchants access to their provinces again!"
  TRADEALLOWOTHER_LOG:0 "$ACTOR$ allows the merchants of $RECIPIENT$ access to their provinces again!"
- CRUSADEONUS_TITLE:0 "Called Crusade"
- CRUSADEONUS_SETUP:0 "When the Papal Controller calls for a Crusade against us."
+ CRUSADEONUS_TITLE:0 "Called Bellum Sanctum"
+ CRUSADEONUS_SETUP:0 "When the Episcopal Controller calls for a Crusade against us."
  CRUSADEONUS_HEADER:0 "Herald from"
  CRUSADEONUS_1:0 "$ACTOR$"
- CRUSADEONUS_2:0 "$MONARCHTITLE$, the Christian Infidels have called for a"
- CRUSADEONUS_3:0 "CRUSADE"
+ CRUSADEONUS_2:0 "$MONARCHTITLE$, the Saelian Infidels have called for a"
+ CRUSADEONUS_3:0 "BELLUM SANCTUM"
  CRUSADEONUS_4:0 "against"
  CRUSADEONUS_5:0 "US!"
- CRUSADEONUS_6:0 "Infidel soldiers will flock to the banners of Catholic countries at war with us."
- CRUSADEONUS_LOG:0 "The Pope ($ACTOR$) has called for a Crusade against us."
+ CRUSADEONUS_6:0 "Infidel soldiers will flock to the banners of Liemarian countries at war with us."
+ CRUSADEONUS_LOG:0 "The Pope ($ACTOR$) has called for a Bellum Sanctum against us."
  CRUSADEONUS_BTN1:0 "OK"
  CRUSADEONUS_BTN2:0 "OK"
  CRUSADEONUS_BTN3:0 "Go to"
- CRUSADEONOTHER_TITLE:0 "Called Crusade"
- CRUSADEONOTHER_SETUP:0 "When the Papal Controller calls for a Crusade against another country."
+ CRUSADEONOTHER_TITLE:0 "Called Bellum Sanctum"
+ CRUSADEONOTHER_SETUP:0 "When the Episcopal Controller calls for a Crusade against another country."
  CRUSADEONOTHER_HEADER:0 "Herald from"
  CRUSADEONOTHER_1:0 "$ACTOR$"
  CRUSADEONOTHER_2:0 "$MONARCHTITLE$, "
  CRUSADEONOTHER_3:0 "The Pope ($ACTOR$)"
- CRUSADEONOTHER_4:0 "has called for a Crusade against"
+ CRUSADEONOTHER_4:0 "has called for a Bellum Sanctum against"
  CRUSADEONOTHER_5:0 "$RECIPIENT$"
- CRUSADEONOTHER_LOG:0 "The Pope ($ACTOR$) has called for a Crusade against $RECIPIENT$."
+ CRUSADEONOTHER_LOG:0 "The Episcopus ($ACTOR$) has called for a Bellum Sanctum against $RECIPIENT$."
  CRUSADEONOTHER_BTN1:0 "OK"
  CRUSADEONOTHER_BTN2:0 "OK"
  CRUSADEONOTHER_BTN3:0 "Go to"
- WECRUSADE_TITLE:0 "Called Crusade"
- WECRUSADE_SETUP:0 "When we call for a Crusade against another country."
+ WECRUSADE_TITLE:0 "Called Bellum Sanctum"
+ WECRUSADE_SETUP:0 "When we call for a Bellum Sanctum against another country."
  WECRUSADE_HEADER:0 "$MESSENGER$"
- WECRUSADE_1:0 "Crusade"
+ WECRUSADE_1:0 "Bellum Sanctum"
  WECRUSADE_2:0 "$MONARCHTITLE$,"
  WECRUSADE_3:0 "$RECIPIENT$"
- WECRUSADE_4:0 "will soon learn to fear the might of Christianity!"
- WECRUSADE_LOG:0 "We have called for a Crusade against $RECIPIENT$."
+ WECRUSADE_4:0 "will soon learn to fear the might of Saelianism!"
+ WECRUSADE_LOG:0 "We have called for a Bellum Sanctum against $RECIPIENT$."
  WECRUSADE_BTN1:0 "OK"
  WECRUSADE_BTN2:0 "OK"
  WECRUSADE_BTN3:0 "Go to"
@@ -4791,7 +4791,7 @@
  EXCOMREVONUS_BTN2:0 "OK"
  EXCOMREVONUS_BTN3:0 "Go to"
  EXCOMREVONOTHER_TITLE:0 "Revoked Excommunication"
- EXCOMREVONOTHER_SETUP:0 "When the Papal Controller revokes excommunication."
+ EXCOMREVONOTHER_SETUP:0 "When the Episcopal Controller revokes excommunication."
  EXCOMREVONOTHER_HEADER:0 "Herald from"
  EXCOMREVONOTHER_1:0 "$ACTOR$"
  EXCOMREVONOTHER_2:0 "$MONARCHTITLE$, "
@@ -5588,40 +5588,40 @@
  EXCOMONUS_BTN2:0 "OK"
  EXCOMONUS_BTN3:0 "Go to"
  EXCOMONOTHER_TITLE:0 "Ruler Excommunicated"
- EXCOMONOTHER_SETUP:0 "When the Papal Controller excommunicates a ruler."
+ EXCOMONOTHER_SETUP:0 "When the Episcopal Controller excommunicates a ruler."
  EXCOMONOTHER_HEADER:0 "Herald from"
  EXCOMONOTHER_1:0 "$ACTOR$"
  EXCOMONOTHER_2:0 "$MONARCHTITLE$, "
- EXCOMONOTHER_3:0 "The Pope ($ACTOR$)"
+ EXCOMONOTHER_3:0 "The Episcopus ($ACTOR$)"
  EXCOMONOTHER_4:0 "has excommunicated the ruler of"
  EXCOMONOTHER_5:0 "$RECIPIENT$."
- EXCOMONOTHER_LOG:0 "The Pope ($ACTOR$) excommunicated the ruler of $RECIPIENT$."
+ EXCOMONOTHER_LOG:0 "The Episcopus ($ACTOR$) excommunicated the ruler of $RECIPIENT$."
  EXCOMONOTHER_BTN1:0 "OK"
  EXCOMONOTHER_BTN2:0 "OK"
  EXCOMONOTHER_BTN3:0 "Go to"
- NEWPOPE_TITLE:0 "New Pope"
- NEWPOPE_SETUP:0 "When a new Pope has been elected."
- NEWPOPE_HEADER:0 "New Pope elected"
- NEWPOPE_1:0 "The Papacy"
- NEWPOPE_2:0 "The Papal Conclave has elected"
+ NEWPOPE_TITLE:0 "New Episcopus"
+ NEWPOPE_SETUP:0 "When a new Episcopus has been elected."
+ NEWPOPE_HEADER:0 "New Episcopus elected"
+ NEWPOPE_1:0 "The Episcopate"
+ NEWPOPE_2:0 "The Episcopal Conclave has elected"
  NEWPOPE_3:0 "$POPE$"
- NEWPOPE_4:0 "as the new Pope. "
- NEWPOPE_LOG:0 "The Papal Conclave has elected $POPE$ as the new Pope."
+ NEWPOPE_4:0 "as the new Episcopus. "
+ NEWPOPE_LOG:0 "The Episcopal Conclave has elected $POPE$ as the new Episcopus."
  NEWPOPE_BTN1:0 "OK"
  NEWPOPE_BTN2:0 "OK"
  NEWPOPE_BTN3:0 "Go to"
- CURIACONTROLPAP:0 "The Pope answers only to God."
+ CURIACONTROLPAP:0 "The Episcopus answers only to God."
  CURIACONTROLTAG:0 "A black day for the Church."
- CURIACONTROLLEROTHER_TITLE:0 "Became Papal Controller"
- CURIACONTROLLEROTHER_SETUP:0 "When another country becomes the new Papal Controller."
+ CURIACONTROLLEROTHER_TITLE:0 "Became Episcopal Controller"
+ CURIACONTROLLEROTHER_SETUP:0 "When another country becomes the new Episcopal Controller."
  CURIACONTROLLEROTHER_HEADER:0 "News from the Holy See"
- CURIACONTROLLEROTHER_1:0 "A New Pope!"
- CURIACONTROLLEROTHER_2:0 "The Papal Conclave has elected"
+ CURIACONTROLLEROTHER_1:0 "A New Episcopus!"
+ CURIACONTROLLEROTHER_2:0 "The Episcopal Conclave has elected"
  CURIACONTROLLEROTHER_3:0 "$POPE$"
  CURIACONTROLLEROTHER_4:1 "He is loyal to §Y$CONTROLLER$§W which now is the new"
- CURIACONTROLLEROTHER_5:0 "PAPAL CONTROLLER"
+ CURIACONTROLLEROTHER_5:0 "EPISCOPAL CONTROLLER"
  CURIACONTROLLEROTHER_6:0 "$COMMENT$"
- CURIACONTROLLEROTHER_LOG:0 "$CONTROLLER$ is the new Papal Controller."
+ CURIACONTROLLEROTHER_LOG:0 "$CONTROLLER$ is the new Episcopal Controller."
  CURIACONTROLLEROTHER_BTN1:0 "OK"
  CURIACONTROLLEROTHER_BTN2:0 "OK"
  CURIACONTROLLEROTHER_BTN3:0 "Go to"
