--- a/localisation/text_l_english.yml
+++ b/localisation/text_l_english.yml
@@ -4371,11 +4371,11 @@
  HAVE_NO_UNITS_IN_SIEGE:0 "Have no units in siege"
  HAVE_A_UNITS_WITH_A_LEADER:0 "Have a unit with a leader"
  HAVE_NO_UNITS_WITH_A_LEADER:0 "Have no units with a leader"
- ARE_NOT_PAPAL_CONTROLLER:0 "Are NOT the Papal controller"
- ARE_PAPAL_CONTROLLER:0 "Are the Papal controller"
- YOU_ARE_NOT_PAPAL_CONTROLLER:0 "You are not the Papal Controller."
- ARE_NOT_PREVIOUS_PAPAL_CONTROLLER:0 "Were NOT the Papal controller previously"
- ARE_PREVIOUS_PAPAL_CONTROLLER:0 "Were the Papal controller previously"
+ ARE_NOT_PAPAL_CONTROLLER:0 "Are NOT the Episcopal controller"
+ ARE_PAPAL_CONTROLLER:0 "Are the Episcopal controller"
+ YOU_ARE_NOT_PAPAL_CONTROLLER:0 "You are not the Episcopal Controller."
+ ARE_NOT_PREVIOUS_PAPAL_CONTROLLER:0 "Were NOT the Episcopal controller previously"
+ ARE_PREVIOUS_PAPAL_CONTROLLER:0 "Were the Episcopal controller previously"
  HAVE_A_PERCENTAGE_OF_OVERSEAS_PROVINCE_LARGER_THAN:0 "Overseas province percentage at least "
  HAVE_A_PERCENTAGE_OF_OVERSEAS_PROVINCE_SMALLER_THAN:0 "Overseas province percentage smaller than "
  HAVE_LESS_MERCHANTS_THAN:0 "Have fewer active merchants than "
