--- a/localisation/EU4_l_english.yml
+++ b/localisation/EU4_l_english.yml
@@ -2496,8 +2496,8 @@
  ACTIVE_CARDINALS:0 "The country that has the most loyal active cardinals will be the Episcopal controller."
  FUTURE_CARDINALS:0 "When an active cardinal dies, a random one of future cardinals will be chosen to be an active cardinal. The cardinal will be loyal to the one who has spent the most points on him."
  CARDINAL_CONTROLLER:0 "$COUNTRY$ ($VAL$)"
- PAPAL_INFLUENCE_DESC:0 "Papal Influence represents our influence with the Holy Father. This can be spent on future cardinals to make them loyal to us when they one day become active cardinals."
- NEW_PAPAL_INFLUENCE_DESC:0 "Papal Influence represents our influence with the Holy Father. The largest Catholic cities in countries with large papal influence will be chosen to represent the Catholic faith."
+ PAPAL_INFLUENCE_DESC:0 "Episcopal Influence represents our influence with the Holy Father. This can be spent on future cardinals to make them loyal to us when they one day become active cardinals."
+ NEW_PAPAL_INFLUENCE_DESC:0 "Episcopal Influence represents our influence with the Holy Father. The largest Catholic cities in countries with large papal influence will be chosen to represent the Catholic faith."
  PAPAL_NOT_ALLOW:0 "§RYou do not meet all the requirements for taking this action.§!"
  PAPAL_NOT_ENOUGH:0 "§RYou need at least $COST|Y0$ Papal Influence to take this action.§!"
  PAPAL_CURIA_TREASURY_NOT_ENOUGH:0 "§RYou need at least $COST|Y0$¤ Curia Treasury Available to take this action.§!"
@@ -2785,7 +2785,7 @@
  SCORE_NOT_RANKED2:0 "A nation needs to be among the §Y$RANK$§! best nations in one of the three categories."
  SCORE_DRO3:0 "The score is determined by how well the nation is doing. The score gains increase as the game progresses to later dates. Currently score for §Y$NAME$§! is gained at $VAL$."
  SCORE_EXTRA_DRO:0 "There is a detailed view in the ledger where you can see how the rank is calculated for each country."
- M_VATICAN_BUTTON_DRO:0 "Papal Influence: §Y$VALUE$§!"
+ M_VATICAN_BUTTON_DRO:0 "Episcopal Influence: §Y$VALUE$§!"
  M_HRE_BUTTON_DRO:0 "Imperial Authority: §Y$VALUE$§!"
  MAPMODE_MORE:0 "§YMore mapmodes§!"
  BUTTON_OUTLINER_IRO:0 "Outliner"
