--- a/localisation/government_names_l_english.yml
+++ b/localisation/government_names_l_english.yml
@@ -250,7 +250,7 @@
  VIZIER:0 "Vizier"
  GRANDVIZIER:0 "Grand Vizier"
  GRANDVIZIER_fem:0 "Grand Vizier"
- PAPACY:0 "Papacy"
+ PAPACY:0 "Episcopatus Maximus"
  POPE:0 "Episcopus Maximus"
  POPETTE:0 "Episcopus Maximus"
  GRAND_PENSIONARY:0 "Grand Pensionary"
