--- a/localisation/text_l_english.yml
+++ b/localisation/text_l_english.yml
@@ -7101,7 +7101,7 @@
  NOAUTHORITY:1 "You lack the §Y$NUM$§! Imperial Authority required."
  BREAKMARCURIANEWDESC:0 "Breaking a Royal Marriage would normally upset our nobles. However, as Curia controller, we can claim Divine Sanction."
  BREAKRMCURIADESCR:0 "Are you sure you wish to break our royal ties with $COUNTRY$? This will hurt our relations, but as Curia controller, we will not lose Stability."
- PAPAL_INFLUENCE:0 "Papal Influence"
+ PAPAL_INFLUENCE:0 "Episcopal Influence"
  PAPAL_INFLUENCE_NOT_ENOUGH:0 "§R- You do not have enough papal influence.§!"
  levy_church_tax:0 "Levy Church Tax"
  bless_monarch:0 "Bless Ruler"
@@ -7111,7 +7111,7 @@
  CARDINALLIST:0 "$PROVINCE$, $COUNTRY$ with a chance of $SCORE$%.\n"
  YEARLY_PAPAL_INFLUENCE:0 "Yearly Papal Influence"
  YEARLY_CHANGE:0 "Yearly Change"
- CURRENT_PAPAL_INFLUENCE:0 "Papal Influence: §Y$VAL$§!"
+ CURRENT_PAPAL_INFLUENCE:0 "Episcopal Influence: §Y$VAL$§!"
  MONTHLY_PAPAL_INFLUENCE:0 "Each year you gain $VAL$ Papal Influence."
  CATHOLIC_PAPAL_INFLUENCE:0 "Base Value:"
  CARDINALS_PAPAL_INFLUENCE:0 "From Controlled Cardinals:"
@@ -7124,8 +7124,8 @@
  HRE_INFLUENCE_DESC:1 "Imperial Authority represents the amount of control the Emperor exerts over the Princes of the Empire. Authority is needed to enact reform decisions within the Saelian Empire. A high Authority may inspire more nations to join the Empire."
  HRE_INFLUENCE_GAIN:1 "Gained by:\n - Having a large amount of member states\n - The member states being at peace\n - Countries joining the Empire\n - Successive Emperors from the same country\n - Emperor voting with the majority of princes in HRE incidents"
  HRE_INFLUENCE_LOSS:1 "Lost by:\n - Dishonoring the Calls of members\n - Provinces leaving the Empire\n - Imperial territory under the control of foreign states\n - Imperial territory under the control of heathens and heretics\n - Having less than 4 electors\n - Emperor voting with the minority of princes in HRE incidents"
- PAPAL_INF_LESS_THAN:0 "Papal Influence less than"
- PAPAL_INF_AT_LEAST:0 "Papal Influence at least"
+ PAPAL_INF_LESS_THAN:0 "Episcopal Influence less than"
+ PAPAL_INF_AT_LEAST:0 "Episcopal Influence at least"
  INVESTED_PAPAL_INF_LESS_THAN:0 "Invested Papal Influence less than"
  INVESTED_PAPAL_INF_AT_LEAST:0 "Invested Papal Influence at least"
  ADD_PAPAL_INFLUENCE:0 "$DIRECTION$ $VALUE$ Papal Influence"
