--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -3,15 +3,15 @@
  PROV2:0 "Prov2"
  PROV3:0 "Prov3"
  PROV4:0 "Prov4"
- PROV5:0 "Prov5"
- PROV6:0 "Prov6"
+ PROV5:0 "Ehrenstadt"
+ PROV6:0 "Kerborn"
  PROV7:0 "Njuhccamavran Bay"
- PROV8:0 "Prov8"
- PROV9:0 "SEA 9"
- PROV10:0 "Prov10"
- PROV11:0 "Prov11"
- PROV12:0 "Prov12"
- PROV13:0 "Prov13"
+ PROV8:0 "Verefel"
+ PROV9:0 "Ehren Sea"
+ PROV10:0 "Ehrenwitz"
+ PROV11:0 "Emedorf"
+ PROV12:0 "Himmelnport"
+ PROV13:0 "Nerade"
  PROV14:0 "Prov14"
  PROV15:0 "Prov15"
  PROV16:0 "Prov16"
@@ -95,7 +95,7 @@
  PROV94:0 "Ninlilatu"
  PROV95:0 "Sijjazur"
  PROV96:0 "Sedican Coast"
- PROV97:0 "Prov97"
+ PROV97:0 "Dhaylan Depth"
  PROV98:0 "Dhofarqil"
  PROV99:0 "Aswanqalb"
  PROV100:0 "Qudsala"
@@ -164,7 +164,7 @@
  PROV163:0 "Alcalea"
  PROV164:0 ""
  PROV165:0 ""
- PROV166:0 ""
+ PROV166:0 "Albasatian Sea"
  PROV167:0 "Paraconna"
  PROV168:0 "Variza"
  PROV169:0 ""
@@ -359,7 +359,7 @@
  PROV358:0 ""
  PROV359:0 ""
  PROV360:0 ""
- PROV361:0 ""
+ PROV361:0 "East Furmarian Sea"
  PROV362:0 ""
  PROV363:0 ""
  PROV364:0 ""
@@ -414,7 +414,7 @@
  PROV413:0 ""
  PROV414:0 ""
  PROV415:0 "South Harban Coast"
- PROV416:0 ""
+ PROV416:0 "Envase Fan"
  PROV417:0 ""
  PROV418:0 "Coraniro"
  PROV419:0 ""
@@ -426,7 +426,7 @@
  PROV425:0 ""
  PROV426:0 "South Cabiran Coast"
  PROV427:0 "Northern Antawili Coast"
- PROV428:0 "Albasatian Sea"
+ PROV428:0 ""
  PROV429:0 "Paduano"
  PROV430:0 "Viacheli"
  PROV431:0 "Tiepol"
@@ -458,7 +458,7 @@
  PROV457:0 ""
  PROV458:0 ""
  PROV459:0 ""
- PROV460:0 "Envase Fan"
+ PROV460:0 ""
  PROV461:0 ""
  PROV462:0 ""
  PROV463:0 ""
