--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -29,7 +29,7 @@
  PROV28:0 "Aarnimetsä"
  PROV29:0 "Suokorpi"
  PROV30:0 "Aapotorni"
- PROV31:0 "Aarnijärvi"
+ PROV31:0 "Jäävori"
  PROV32:0 "Sydänjoki"
  PROV33:0 "Itäänpää"
  PROV34:0 "Guovdageaidnu"
@@ -44,7 +44,7 @@
  PROV43:0 "Koivukorpi"
  PROV44:0 "Metsäsydän"
  PROV45:0 "Havuranta"
- PROV46:0 "Rantahelmi"
+ PROV46:0 "Lumsal"
  PROV47:0 "Rantaniitty"
  PROV48:0 "Prov48"
  PROV49:0 "Prov49"
@@ -69,9 +69,9 @@
  PROV68:0 "Refria"
  PROV69:0 "Ubarsha"
  PROV70:0 "Azalkaba"
- PROV71:0 "Prov71"
- PROV72:0 "Prov72"
- PROV73:0 "Prov73"
+ PROV71:0 "Baluqara"
+ PROV72:0 "Altariqum"
+ PROV73:0 "Hanisuar"
  PROV74:0 "Riyaduna"
  PROV75:0 "Rizqal"
  PROV76:0 "Qafqumir"
@@ -79,10 +79,10 @@
  PROV78:0 "Marjanid"
  PROV79:0 "Dahrayyam"
  PROV80:0 "Prov80"
- PROV81:0 "Prov81"
- PROV82:0 "Prov82"
- PROV83:0 "Prov83"
- PROV84:0 "Prov84"
+ PROV81:0 "Baltoq"
+ PROV82:0 "Gudayik"
+ PROV83:0 "Western Shamaliu"
+ PROV84:0 "Qufiram"
  PROV85:0 "Ghaybarin"
  PROV86:0 "Boujloudiya"
  PROV87:0 "Tafsiraq"
@@ -108,11 +108,11 @@
  PROV107:0 "Prov107"
  PROV108:0 "Prov108"
  PROV109:0 "Wyrmegnac"
- PROV110:0 "Prov109"
+ PROV110:0 "Prov110"
  PROV111:0 "Geoberic Bay" 
- PROV112:0 "Prov110"
- PROV113:0 "Prov111"
- PROV114:0 "Prov112"
+ PROV112:0 "Prov112"
+ PROV113:0 "Prov113"
+ PROV114:0 "Prov114"
  PROV115:0 "Northern Niheyabdan Sea"
  PROV116:0 "Vallacielo"
  PROV117:0 "Lentisca"
@@ -138,65 +138,65 @@
  PROV137:0 "Seliana"
  PROV138:0 "Montevefrdi"
  PROV139:0 "Navarecipa"
- PROV140:0 ""
- PROV141:0 ""
- PROV142:0 ""
+ PROV140:0 "Alhelm"
+ PROV141:0 "Ishqatan"
+ PROV142:0 "Qalirum"
  PROV143:0 "Zibarat"
- PROV144:0 ""
- PROV145:0 ""
+ PROV144:0 "East Sadeqa"
+ PROV145:0 "Yashuqar"
  PROV146:0 "Northern Shamaliu"
- PROV147:0 ""
+ PROV147:0 "Algharbiya"
  PROV148:0 "bahnhisn"
- PROV149:0 ""
- PROV150:0 ""
- PROV151:0 ""
+ PROV149:0 "Nushar"
+ PROV150:0 "Yashqar"
+ PROV151:0 "Alcona"
  PROV152:0 "Alburji"
- PROV153:0 ""
+ PROV153:0 "Qalgar"
  PROV154:0 "East Al-Bahriyah"
  PROV155:0 "North Al-Bahriyah"
  PROV156:0 "Southern Dafda"
  PROV157:0 "Western Dafda"
  PROV158:0 "Northern Dafda"
  PROV159:0 "Iskabban"
- PROV160:0 ""
- PROV161:0 ""
- PROV162:0 ""
- PROV163:0 "Alcalea"
- PROV164:0 ""
- PROV165:0 ""
+ PROV160:0 "Reshan"
+ PROV161:0 "Yashar"
+ PROV162:0 "Nurmah"
+ PROV163:0 "Alqalua"
+ PROV164:0 "Riqumat"
+ PROV165:0 "Qaranish"
  PROV166:0 "Albasatian Sea"
- PROV167:0 "Paraconna"
+ PROV167:0 "Alpariqa"
  PROV168:0 "Variza"
- PROV169:0 ""
- PROV170:0 ""
- PROV171:0 ""
+ PROV169:0 "Alnashar"
+ PROV170:0 "Alpadosa"
+ PROV171:0 "Shadurim"
  PROV172:0 "Altawrian Coast"
  PROV173:0 "Almazamal"
  PROV174:0 "Águilarroyo"
  PROV175:0 "Fahmhafra"
  PROV176:0 "Camporomero"
  PROV177:0 "Syreniman Sea"
- PROV178:0 "Quecusta"
+ PROV178:0 "Alqasta"
  PROV179:0 "Caytuna"
- PROV180:0 "Cirronápa"
- PROV181:0 "Antidolasa"
+ PROV180:0 "Qurona"
+ PROV181:0 "Altadolas"
  PROV182:0 "Ecolunte"
  PROV183:0 "Caladida"
- PROV184:0 "Esecerro"
+ PROV184:0 "Saqura"
  PROV185:0 "Shamalian Sea"
- PROV186:0 "Riovolare"
+ PROV186:0 "Riyafola"
  PROV187:0 "Bosalva"
  PROV188:0 "Adonuepadre"
  PROV189:0 "Sierra Verde"
  PROV190:0 "Alanqisam alsughraa"
- PROV191:0 ""
- PROV192:0 ""
- PROV193:0 ""
+ PROV191:0 "Tarinum"
+ PROV192:0 "Namruq"
+ PROV193:0 "Zarashim"
  PROV194:0 "Outer Bay"
  PROV195:0 "Algharqim"
- PROV196:0 ""
+ PROV196:0 "Femayim"
  PROV197:0 "Dushmira"
- PROV198:0 ""
+ PROV198:0 "Shurqal"
  PROV199:0 "Altaqadim"
  PROV200:0 "Huzamjar"
  PROV201:0 "Al-Wadihajara"
@@ -206,15 +206,15 @@
  PROV205:0 "Alzamzam"
  PROV206:0 "Nahralnoriya"
  PROV207:0 "Almutawiyah"
- PROV208:0 ""
+ PROV208:0 "Alsham"
  PROV209:0 "Liqalnahr"
  PROV210:0 "Almufqoodah"
- PROV211:0 ""
+ PROV211:0 "Prov211"
  PROV212:0 "Coast of Rubmeo"
- PROV213:0 ""
- PROV214:0 ""
- PROV215:0 ""
- PROV216:0 ""
+ PROV213:0 "Qadruq"
+ PROV214:0 "Alnithar"
+ PROV215:0 "Qalish"
+ PROV216:0 "Alradom"
  PROV217:0 "Zawarqabad"
  PROV218:0 "Barqanah"
  PROV219:0 "Abyadard"
@@ -225,28 +225,28 @@
  PROV224:0 ""
  PROV225:0 ""
  PROV226:0 ""
- PROV227:0 ""
- PROV228:0 ""
- PROV229:0 ""
- PROV230:0 ""
- PROV231:0 ""
- PROV232:0 ""
- PROV233:0 ""
+ PROV227:0 "Pohjanportti"
+ PROV228:0 "Kulpulampi"
+ PROV229:0 "Taikametsa"
+ PROV230:0 "Ruskalaakso"
+ PROV231:0 "Metsärvi"
+ PROV232:0 "Sinvri"
+ PROV233:0 "Järtuli"
  PROV234:0 "Uzkolian Strait"
  PROV235:0 "Tummic Sea"
- PROV236:0 ""
+ PROV236:0 "Lumiariia"
  PROV237:0 ""
- PROV238:0 ""
- PROV239:0 ""
- PROV240:0 ""
+ PROV238:0 "Aarnijärvi"
+ PROV239:0 "Kuthiekka"
+ PROV240:0 "Rantahelmi"
  PROV241:0 ""
  PROV242:0 ""
  PROV243:0 ""
- PROV244:0 ""
- PROV245:0 ""
+ PROV244:0 "Metsälinn"
+ PROV245:0 "Auringonkukka"
  PROV246:0 ""
  PROV247:0 ""
- PROV248:0 ""
+ PROV248:0 "Klaampi"
  PROV249:0 ""
  PROV250:0 ""
  PROV251:0 ""
@@ -260,7 +260,7 @@
  PROV259:0 ""
  PROV260:0 ""
  PROV261:0 ""
- PROV262:0 ""
+ PROV262:0 "Aamusatama"
  PROV263:0 ""
  PROV264:0 ""
  PROV265:0 ""
@@ -295,17 +295,17 @@
  PROV294:0 ""
  PROV295:0 ""
  PROV296:0 ""
- PROV297:0 ""
- PROV298:0 ""
+ PROV297:0 "Rõugemaa"
+ PROV298:0 "Käbala"
  PROV299:0 ""
  PROV300:0 ""
  PROV301:0 ""
  PROV302:0 "Merkatiman Sea"
  PROV303:0 ""
- PROV304:0 ""
- PROV305:0 ""
- PROV306:0 ""
- PROV307:0 ""
+ PROV304:0 "Metsalu"
+ PROV305:0 "Ilusjõgi"
+ PROV306:0 "Metsaraba"
+ PROV307:0 "Linnutee"
  PROV308:0 ""
  PROV309:0 ""
  PROV310:0 ""
@@ -563,7 +563,7 @@
  PROV562:0 "Zoltstein"
  PROV563:0 "Trockwald"
  PROV564:0 "Ifritican coast"
- PROV565:0 ""
+ PROV565:0 "Calon"
  PROV566:0 "Adrianburg"
  PROV567:0 "Biertal"
  PROV568:0 "Bodendorf"
@@ -1654,62 +1654,62 @@
  PROV1653:0 "Lake Balchasj"
  PROV1654:0 "Lake Bajkal"
  PROV1655:0 "Poyang Lake"
- PROV1656:0 "Lake Titicaca"
- PROV1657:0 "Lake Nicaragua"
- PROV1658:0 "Lake Okeechobee"
- PROV1659:0 "Lake Ontario"
- PROV1660:0 "Lake Erie"
- PROV1661:0 "Lake Huron"
- PROV1662:0 "Lake Michigan"
- PROV1663:0 "Lake Superior"
- PROV1664:0 "Lake Nipigon"
- PROV1665:0 "Lake Winnipeg"
- PROV1666:0 "Commander Basin"
- PROV1667:0 "Emperor Ridge"
- PROV1668:0 "Northwestern Pacific"
- PROV1669:0 "Oyashio Current"
- PROV1670:0 "Northern Kuroshio Current"
- PROV1671:0 "Kuroshio Current"
- PROV1672:0 "Western Pacific"
- PROV1673:0 "Micronesia Sea"
- PROV1674:0 "Mariana Trench"
- PROV1675:0 "North Pacific Equatorial Current"
- PROV1676:0 "Melanesian Basin"
- PROV1677:0 "Kuskokwim Bay"
- PROV1678:0 "Bering Strait"
- PROV1679:0 "Shirshov Ridge"
- PROV1680:0 "Aleutian Islands"
- PROV1681:0 "Shumagin Islands"
- PROV1682:0 "Gulf of Alaska"
- PROV1683:0 "Western Aleutian Trench"
- PROV1684:0 "Northern California Current"
- PROV1685:0 "Eastern Aleutian Trench"
- PROV1686:0 "Eastern North Pacific Drift"
- PROV1687:0 "California Current"
- PROV1688:0 "Murray Fracture Zone"
- PROV1689:0 "North Pacific Drift"
- PROV1690:0 "Western North Pacific Drift"
- PROV1691:0 "Wake Island"
- PROV1692:0 "Midway Island"
- PROV1693:0 "Molokai Fracture Zone"
- PROV1694:0 "Southern California Current"
- PROV1695:0 "Revilla Gigedo Islands"
- PROV1696:0 "Clarion Fracture Zone"
- PROV1697:0 "Coast of Hawaii"
- PROV1698:0 "Marshall Islands"
- PROV1699:0 "Central Pacific Basin"
- PROV1700:0 "Cocos Ridge"
- PROV1701:0 "Guatemala Basin"
- PROV1702:0 "Galapagos Islands"
- PROV1703:0 "Nazca Ridge"
- PROV1704:0 "Juan Fernandez Islands"
- PROV1705:0 "Chile Rise"
- PROV1706:0 "West of Magellans"
- PROV1707:0 "Clipperton Island"
- PROV1708:0 "Galapagos Rise"
- PROV1709:0 "Peru Current"
- PROV1710:0 "Humboldt Current"
- PROV1711:0 "East Pacific Rise"
+ PROV1656:0 ""
+ PROV1657:0 ""
+ PROV1658:0 ""
+ PROV1659:0 ""
+ PROV1660:0 ""
+ PROV1661:0 ""
+ PROV1662:0 ""
+ PROV1663:0 ""
+ PROV1664:0 ""
+ PROV1665:0 ""
+ PROV1666:0 ""
+ PROV1667:0 ""
+ PROV1668:0 ""
+ PROV1669:0 ""
+ PROV1670:0 ""
+ PROV1671:0 ""
+ PROV1672:0 ""
+ PROV1673:0 ""
+ PROV1674:0 ""
+ PROV1675:0 ""
+ PROV1676:0 ""
+ PROV1677:0 ""
+ PROV1678:0 ""
+ PROV1679:0 ""
+ PROV1680:0 ""
+ PROV1681:0 ""
+ PROV1682:0 ""
+ PROV1683:0 ""
+ PROV1684:0 ""
+ PROV1685:0 ""
+ PROV1686:0 ""
+ PROV1687:0 ""
+ PROV1688:0 ""
+ PROV1689:0 ""
+ PROV1690:0 ""
+ PROV1691:0 ""
+ PROV1692:0 ""
+ PROV1693:0 ""
+ PROV1694:0 ""
+ PROV1695:0 ""
+ PROV1696:0 ""
+ PROV1697:0 ""
+ PROV1698:0 ""
+ PROV1699:0 ""
+ PROV1700:0 ""
+ PROV1701:0 ""
+ PROV1702:0 ""
+ PROV1703:0 ""
+ PROV1704:0 ""
+ PROV1705:0 ""
+ PROV1706:0 ""
+ PROV1707:0 ""
+ PROV1708:0 ""
+ PROV1709:0 ""
+ PROV1710:0 ""
+ PROV1711:0 ""
  PROV1712:0 "South Equatorial Pacific Current"
  PROV1713:0 "Easter Island"
  PROV1714:0 "North Pacific Converge Zone"
