--- a/localisation/TD_nationformation_l_english.yml
+++ b/localisation/TD_nationformation_l_english.yml
@@ -1,8 +1,8 @@
 ﻿l_english:
  tummland_nation_title:0 "Unite Tummland"
- tummland_nation_desc:0 "FORM TUMMLAND DESC"
+ tummland_nation_desc:0 "Tummland has been under foreign rule for far to long. It is time we unite and show the world our might!"
  ansgarland_nation_title:0 "Restore Kingdom of Ansgarland"
- ansgarland_nation_desc:0 "Restore Ansgarland DESC"
+ ansgarland_nation_desc:0 "Kingdom of Ansgarland was short-lived state during the middle ages. It was proclaimed after Ansgar, duke of Sylvenmark, conquered the glaser peninsula. Despite existing for only 80 years, it made the way for geoberic culture to emerge and influence this region for years to come."
  bogiland_nation_title:0 "Restore Kingdom of Bogiland"
  bogiland_nation_desc:0 "Restore Bogiland DESC"
  nifthem_nation_title:0 "Unite People of Nifthem"
@@ -10,4 +10,6 @@
  argenia_nation_title:0 "Reunite Argenia"
  argenia_nation_desc:0 "Argenia DESC"
  integrate_brother_argenia_tooltip:0 "[Root.GetName] integrates territory of the unlawful ruler into its domain."
+ nordmark_nation_title:0 "Form Nordmark"
+ nordmark_nation_desc:0 "Just like Glaser people in the west, now gyrdians need to be assimilated to protect the northern border of the empire."
  
