--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -272,6 +272,8 @@
  TRO_ADJ:0 "Trockwalder"
  ANS:0 "Ansgarland"
  ANS_ADJ:0 "Ansgarlander"
+ NRD:0 "Nordmark"
+ NRD_ADJ:0 "Nordmarker"
 
  BOH:0 "Bohemia"
  BOH_ADJ:0 "Bohemian"
