--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -726,36 +726,36 @@
  PROV725:0 "Ostance"
  PROV726:0 "Togawy"
  PROV727:0 "Dorchean Channel"
- PROV728:0 ""
- PROV729:0 ""
- PROV730:0 ""
- PROV731:0 ""
- PROV732:0 ""
+ PROV728:0 "Peskowic"
+ PROV729:0 "Lagow"
+ PROV730:0 "Orle"
+ PROV731:0 "Berzan"
+ PROV732:0 "Poręby"
  PROV733:0 "Coast of Ciehralagan"
  PROV734:0 "Indriger Sea"
- PROV735:0 ""
- PROV736:0 ""
- PROV737:0 ""
- PROV738:0 ""
- PROV739:0 ""
- PROV740:0 ""
+ PROV735:0 "Zaciek"
+ PROV736:0 "Winki"
+ PROV737:0 "Oran"
+ PROV738:0 "Lipnik"
+ PROV739:0 "Wrodawa"
+ PROV740:0 "Bugno"
  PROV741:0 "Outer Indriger Sea"
  PROV742:0 ""
  PROV743:0 ""
  PROV744:0 ""
  PROV745:0 ""
- PROV746:0 ""
+ PROV746:0 "Witkow"
  PROV747:0 "Northern Adasmerragadde Coast"
- PROV748:0 ""
- PROV749:0 ""
- PROV750:0 ""
- PROV751:0 ""
+ PROV748:0 "Eordygian Sea"
+ PROV749:0 "Surachow"
+ PROV750:0 "Mława"
+ PROV751:0 "Żytnik"
  PROV752:0 ""
  PROV753:0 ""
  PROV754:0 ""
  PROV755:0 ""
  PROV756:0 ""
- PROV757:0 ""
+ PROV757:0 "Lasek"
  PROV758:0 ""
  PROV759:0 ""
  PROV760:0 ""
