--- a/localisation/EU4_l_english.yml
+++ b/localisation/EU4_l_english.yml
@@ -1213,7 +1213,7 @@
  APH_ALREADY_PART_OF_HRE:0 "$NAME$ is already a part of the Saelian Empire."
  APH_NATION_RELIGION:0 "$NAME$ is not a $RELIGION$ nation, so it cannot add provinces to the Saelian Empire."
  APH_PROV_RELIGION:0 "$NAME$ must be $RELIGION$ before it can be added to the Saelian Empire."
- APH_NO_NEIGHBOUR:0 "A province needs to be adjacent to the HRE to join it."
+ APH_NO_NEIGHBOUR:0 "A province needs to be adjacent to the SE to join it."
  APH_NOT_CORE:0 "$NAME$ needs to be a $WHO$ core province before it can join the Saelian Empire."
  APH_TOO_LARGE:1 "$COUNTRY$ is simply too large to join the Empire."
  APH_NOT_RELATION:1 "$COUNTRY$'s relation with $EMPEROR$ is not good enough. It needs to be at §Y$NEED$§! but is currently only §R$CURR$§!."
@@ -1222,11 +1222,11 @@
  RPH_NOT_PART_OF_HRE:0 "$NAME$ is not a part of the Saelian Empire."
  RPH_NOT_CORE:0 "$NAME$ has to be a $ADJ$ core to allow it to be removed from the Saelian Empire."
  RPH_EMPEROR:0 "As the Emperor we cannot remove provinces from the Empire."
- RPH_PRINCE_OF_EMPIRE:0 "As a member of HRE, we cannot remove individual provinces from the HRE. If we leave the Empire we must give up any non-core HRE provinces"
+ RPH_PRINCE_OF_EMPIRE:0 "As a member of SE, we cannot remove individual provinces from the SE. If we leave the Empire we must give up any non-core SE provinces"
  RPH_ELECTOR:0 "As an Elector, we cannot remove provinces from the Empire."
- RPH_AT_WAR:1 "We cannot remove provinces from the HRE while at war!"
- RPH_SUBJECT:0 "We need to be independent to remove provinces from the HRE."
- RPH_TRUCE_EMP:0 "It is not possible to remove provinces from the HRE while in a truce with the Emperor."
+ RPH_AT_WAR:1 "We cannot remove provinces from the SE while at war!"
+ RPH_SUBJECT:0 "We need to be independent to remove provinces from the SE."
+ RPH_TRUCE_EMP:0 "It is not possible to remove provinces from the SE while in a truce with the Emperor."
  WRONG_RELIGION_GROUP:0 "They belong to a different religion group and will not respond to such a demand."
  CONFIRMJOINHRE:0 "Expand the Saelian Empire"
  CONFIRMJOINHRETEXT:0 "The federation of kingdoms and principalities that constituted the Saelian Empire at times made up the larger part of central Europe. The size of the empire varied at different times and it was loosely organized during most of its existence but the German and Austrian lands always constituted an integral part of the Empire.\nDo you wish to add §Y$PROV$§W to the Empire?"
@@ -1827,7 +1827,7 @@
  HREVOTE_OVERLORD:0 "Being Vassal or Union: §G+$VAL$§W\n"
  HREVOTE_BIG_IN_HRE:0 "Large Nation in the Empire: §G+$VAL$§W\n"
  HREVOTE_WE_TOO_SMALL:0 "Too small nation: §R$VAL$§W\n"
- HREVOTE_NON_MEMBER:0 "Not a member of the HRE: §R$VAL$§W\n"
+ HREVOTE_NON_MEMBER:0 "Not a member of the SE: §R$VAL$§W\n"
  HREVOTE_IMPERIAL_AUTHORITY:0 "Imperial Authority: §G+$VAL$§W\n"
  HREVOTE_SAME_CULTURE:0 "Same Culture Group: §G+$VAL$§W\n"
  HREVOTE_ALLIED:0 "Alliance: §G+$VAL$§W\n"
@@ -4513,7 +4513,7 @@
  BAD_SERVER_PASSWORD:0 "Bad password"
  MATCHMAKING_SERVER_FILTER_SEARCH_NAMES:0 "Search for names..."
  MATCHMAKING_FILTER_NAMES:0 "Search for names"
- HRE_LIBERATED:0 "Land was liberated from non-HRE member."
+ HRE_LIBERATED:0 "Land was liberated from non-SE member."
  LEDGER_DYNASTY:0 "Dynasty"
  great_frigate:0 "Great Frigate"
  great_frigateDESCR:0 "A larger type of frigate, carrying additional guns."
