--- a/localisation/messages_l_english.yml
+++ b/localisation/messages_l_english.yml
@@ -5861,18 +5861,18 @@
  HREREVOKE_BTN1:0 "OK"
  HREREVOKE_BTN2:0 "OK"
  HREREVOKE_BTN3:0 "Go to"
- HREDISMANTLEBYUS_TITLE:0 "Dismantled HRE"
+ HREDISMANTLEBYUS_TITLE:0 "Dismantled SE"
  HREDISMANTLEBYUS_SETUP:0 "When the Holy Roman Empire gets dismantled by us."
  HREDISMANTLEBYUS_HEADER:0 "$MESSENGER$"
  HREDISMANTLEBYUS_1:0 "The Empire Dismantled!"
  HREDISMANTLEBYUS_2:1 "We have dismantled the Holy Roman Empire"
  HREDISMANTLEBYUS_3:1 "$TEXT$"
- HREDISMANTLEBYUS_LOG:0 "We have dismantled the HRE."
+ HREDISMANTLEBYUS_LOG:0 "We have dismantled the SE."
  HREDISMANTLEBYUS_BTN1:0 "OK"
  HREDISMANTLEBYUS_BTN2:0 "OK"
  HREDISMANTLEBYUS_BTN3:0 "Go to"
- HREDISMANTLEBYUS_MAP:0 "HRE Dismantled"
- HREDISMANTLE_TITLE:0 "Dismantled HRE"
+ HREDISMANTLEBYUS_MAP:0 "SE Dismantled"
+ HREDISMANTLE_TITLE:0 "Dismantled SE"
  HREDISMANTLE_SETUP:0 "When the Holy Roman Empire gets dismantled."
  HREDISMANTLE_HEADER:0 "$MESSENGER$"
  HREDISMANTLE_1:0 "The Empire Dismantled!"
@@ -5883,8 +5883,8 @@
  HREDISMANTLE_BTN1:0 "OK"
  HREDISMANTLE_BTN2:0 "OK"
  HREDISMANTLE_BTN3:0 "Go to"
- HREDISMANTLE_MAP:0 "HRE Dismantled"
- HREAUTODISMANTLE_TITLE:0 "HRE Dismantled"
+ HREDISMANTLE_MAP:0 "SE Dismantled"
+ HREAUTODISMANTLE_TITLE:0 "SE Dismantled"
  HREAUTODISMANTLE_SETUP:0 "When the Holy Roman Empire is dismantled due to the lack of an eligible Emperor."
  HREAUTODISMANTLE_HEADER:0 "$MESSENGER$"
  HREAUTODISMANTLE_1:0 "The Empire Dismantled!"
@@ -5896,68 +5896,68 @@
  HREAUTODISMANTLE_BTN1:0 "OK"
  HREAUTODISMANTLE_BTN2:0 "OK"
  HREAUTODISMANTLE_BTN3:0 "Go to"
- HREAUTODISMANTLE_MAP:0 "HRE Dismantled"
- HREADDPROVINCEEMPEROR_TITLE:0 "Province Joined HRE"
- HREADDPROVINCEEMPEROR_SETUP:1 "When a new province is added to the HRE by the Emperor."
+ HREAUTODISMANTLE_MAP:0 "SE Dismantled"
+ HREADDPROVINCEEMPEROR_TITLE:0 "Province Joined SE"
+ HREADDPROVINCEEMPEROR_SETUP:1 "When a new province is added to the SE by the Emperor."
  HREADDPROVINCEEMPEROR_HEADER:0 "$MESSENGER$"
  HREADDPROVINCEEMPEROR_1:1 "The Empire is now one province stronger!"
  HREADDPROVINCEEMPEROR_2:1 "$MONARCHTITLE$, we have added "
  HREADDPROVINCEEMPEROR_3:1 "$PROVINCE$"
  HREADDPROVINCEEMPEROR_4:1 "to the Holy Roman Empire."
- HREADDPROVINCEEMPEROR_LOG:0 "$PROVINCE$ is now a part of the HRE."
+ HREADDPROVINCEEMPEROR_LOG:0 "$PROVINCE$ is now a part of the SE."
  HREADDPROVINCEEMPEROR_BTN1:0 "OK"
  HREADDPROVINCEEMPEROR_BTN2:0 "OK"
  HREADDPROVINCEEMPEROR_BTN3:0 "Go to"
- HREADDPROVINCEOTHER_TITLE:0 "Province Joined HRE"
- HREADDPROVINCEOTHER_SETUP:1 "When a new province is added to the HRE by someone else."
+ HREADDPROVINCEOTHER_TITLE:0 "Province Joined SE"
+ HREADDPROVINCEOTHER_SETUP:1 "When a new province is added to the SE by someone else."
  HREADDPROVINCEOTHER_HEADER:0 "$MESSENGER$"
  HREADDPROVINCEOTHER_1:1 "The Empire is now one province stronger!"
  HREADDPROVINCEOTHER_2:0 "$MONARCHTITLE$, the province $PROVINCE$ has"
- HREADDPROVINCEOTHER_3:1 "been added to the HRE by $OWNER$."
+ HREADDPROVINCEOTHER_3:1 "been added to the SE by $OWNER$."
  JOIN_HRE_AFRAID_OF:0 "Rumor has it that they seek protection from the $AFRAID_OF$."
  HREADDPROVINCEOTHER_4:1 "$AFRAID_OF$"
- HREADDPROVINCEOTHER_LOG:0 "$PROVINCE$ is now a part of to the HRE."
+ HREADDPROVINCEOTHER_LOG:0 "$PROVINCE$ is now a part of to the SE."
  HREADDPROVINCEOTHER_BTN1:0 "OK"
  HREADDPROVINCEOTHER_BTN2:0 "OK"
  HREADDPROVINCEOTHER_BTN3:0 "Go to"
- HREREMOVEPROVINCEEMPEROR_TITLE:0 "Province Left HRE"
- HREREMOVEPROVINCEEMPEROR_SETUP:0 "When a province is removed from the HRE and we are the Emperor."
+ HREREMOVEPROVINCEEMPEROR_TITLE:0 "Province Left SE"
+ HREREMOVEPROVINCEEMPEROR_SETUP:0 "When a province is removed from the SE and we are the Emperor."
  HREREMOVEPROVINCEEMPEROR_HEADER:0 "$MESSENGER$"
  HREREMOVEPROVINCEEMPEROR_1:0 "The Holy Roman Empire has lost a province!"
  HREREMOVEPROVINCEEMPEROR_2:0 "$MONARCHTITLE$, the province $PROVINCE$ has"
- HREREMOVEPROVINCEEMPEROR_3:0 "been removed from the HRE."
- HREREMOVEPROVINCEEMPEROR_LOG:0 "$PROVINCE$ is no longer a part of to the HRE."
+ HREREMOVEPROVINCEEMPEROR_3:0 "been removed from the SE."
+ HREREMOVEPROVINCEEMPEROR_LOG:0 "$PROVINCE$ is no longer a part of to the SE."
  HREREMOVEPROVINCEEMPEROR_BTN1:0 "OK"
  HREREMOVEPROVINCEEMPEROR_BTN2:0 "OK"
  HREREMOVEPROVINCEEMPEROR_BTN3:0 "Go to"
- HREREMOVEPROVINCEOTHER_TITLE:0 "Province Left HRE"
- HREREMOVEPROVINCEOTHER_SETUP:0 "When a new province is removed from the HRE."
+ HREREMOVEPROVINCEOTHER_TITLE:0 "Province Left SE"
+ HREREMOVEPROVINCEOTHER_SETUP:0 "When a new province is removed from the SE."
  HREREMOVEPROVINCEOTHER_HEADER:0 "$MESSENGER$"
  HREREMOVEPROVINCEOTHER_1:0 "The Holy Roman Empire has lost a province!"
  HREREMOVEPROVINCEOTHER_2:0 "$MONARCHTITLE$, the province $PROVINCE$ has"
- HREREMOVEPROVINCEOTHER_3:0 "been removed from the HRE."
- HREREMOVEPROVINCEOTHER_LOG:0 "$PROVINCE$ is no longer a part of to the HRE."
+ HREREMOVEPROVINCEOTHER_3:0 "been removed from the SE."
+ HREREMOVEPROVINCEOTHER_LOG:0 "$PROVINCE$ is no longer a part of to the SE."
  HREREMOVEPROVINCEOTHER_BTN1:0 "OK"
  HREREMOVEPROVINCEOTHER_BTN2:0 "OK"
  HREREMOVEPROVINCEOTHER_BTN3:0 "Go to"
- HRELEAVEEMPEROR_TITLE:0 "Country Left HRE"
- HRELEAVEEMPEROR_SETUP:0 "When a country leaves the HRE and we are the emperor."
+ HRELEAVEEMPEROR_TITLE:0 "Country Left SE"
+ HRELEAVEEMPEROR_SETUP:0 "When a country leaves the SE and we are the emperor."
  HRELEAVEEMPEROR_HEADER:0 "$MESSENGER$"
  HRELEAVEEMPEROR_1:0 "The Holy Roman Empire has lost a member!"
  HRELEAVEEMPEROR_2:0 "$MONARCHTITLE$, $WHO$ has decided"
- HRELEAVEEMPEROR_3:0 "to leave the HRE."
+ HRELEAVEEMPEROR_3:0 "to leave the SE."
  HRELEAVEEMPEROR_5:0 "They are a bunch of betraying scums!"
- HRELEAVEEMPEROR_LOG:0 "$WHO$ is no longer a member of the HRE."
+ HRELEAVEEMPEROR_LOG:0 "$WHO$ is no longer a member of the SE."
  HRELEAVEEMPEROR_BTN1:0 "OK"
  HRELEAVEEMPEROR_BTN2:0 "OK"
  HRELEAVEEMPEROR_BTN3:0 "Go to"
- HRELEAVEOTHER_TITLE:0 "Country Left HRE"
- HRELEAVEOTHER_SETUP:0 "When a country leaves the HRE."
+ HRELEAVEOTHER_TITLE:0 "Country Left SE"
+ HRELEAVEOTHER_SETUP:0 "When a country leaves the SE."
  HRELEAVEOTHER_HEADER:0 "$MESSENGER$"
  HRELEAVEOTHER_1:0 "The Holy Roman Empire has lost a member!"
  HRELEAVEOTHER_2:0 "$MONARCHTITLE$, $WHO$ has decided"
- HRELEAVEOTHER_3:0 "to leave the HRE."
- HRELEAVEOTHER_LOG:0 "$WHO$ is no longer a member of the HRE."
+ HRELEAVEOTHER_3:0 "to leave the SE."
+ HRELEAVEOTHER_LOG:0 "$WHO$ is no longer a member of the SE."
  HRELEAVEOTHER_BTN1:0 "OK"
  HRELEAVEOTHER_BTN2:0 "OK"
  HRELEAVEOTHER_BTN3:0 "Go to"
