--- a/localisation/diplomacy_l_english.yml
+++ b/localisation/diplomacy_l_english.yml
@@ -413,8 +413,8 @@
  take_capital_disloyal_desc:0 "War goal is to take the capital from this disloyal vassal."
  defend_country_faith:0 "Defend a friendly country against them"
  defend_country_faith_desc:0 "War goal is defend a country over religion."
- take_province_hre:0 "Attack the HRE"
- take_province_hre_desc:0 "War goal is to take a province that is part of the HRE."
+ take_province_hre:0 "Attack the SE"
+ take_province_hre_desc:0 "War goal is to take a province that is part of the SE."
  defend_country:0 "Defend a friendly country against them"
  defend_country_desc:0 "War goal is defend a friendly country."
  superiority_insult:0 "Show Superiority"
@@ -758,8 +758,8 @@
  GRANTELECTORATEREQDESC:0 "$ACTOR$ offers us an Electorate position in the Holy Roman Empire. By accepting we will be able to vote for the next emperor."
  GRANTFREECITYREQDESC:0 "$ACTOR$ offers us Free City status in the Holy Roman Empire. If we accept, our government will change to a Free City and the Emperor will defend us from all aggressors. If we acquire more provinces or leave the Empire we will lose our Free City status."
  GRANTFREECITYREQDESC_REFORM:0 "\n§RIf we accept, our currently enacted Tier 1 Government Reform $CURRENT|Y$ will be abolished.§!"
- DEMANDUNLAWFULTERRITORYREQDESC:0 "The Emperor $ACTOR$ demands that we return the province of '$PROV|Y$' to the Holy Roman Empire. Denying this request will seriously impact our relation with the HRE."
- DEMANDUNLAWFULTERRITORYREQDENYEFFECTS:0 "Declining will have the following effects:\nThe emperor will receive a casus belli against you.\nProvince effects:\n$PROVEFFECT$\n\nOpinion modifier from members of the HRE:\n$OPINIONEFFECT$"
+ DEMANDUNLAWFULTERRITORYREQDESC:0 "The Emperor $ACTOR$ demands that we return the province of '$PROV|Y$' to the Holy Roman Empire. Denying this request will seriously impact our relation with the SE."
+ DEMANDUNLAWFULTERRITORYREQDENYEFFECTS:0 "Declining will have the following effects:\nThe emperor will receive a casus belli against you.\nProvince effects:\n$PROVEFFECT$\n\nOpinion modifier from members of the SE:\n$OPINIONEFFECT$"
  TRANSFERTRADEPOWERDESC:0 "$ACTOR$ would like us to transfer $VAL|0%$ of our trade power in all our shared trade nodes to them. Do you accept this?"
  revoke_elector_opinion:0 "Revoked Electorate"
  grant_freecity:0 "Granted Free City status"
@@ -860,7 +860,7 @@
  INTEGRATE_OWNS_MORE_PROVINCES:0 "$BIG$ owns more provinces than $SMALL$."
  PEACEOFFER_DEMANDED_PROVINCE_CANNOT_TAKE_CAPITAL:0 "This is their capital and since we have demanded other provinces we cannot demand this as well."
  DIPLO_CHANGE_VASSALS:0 "Opinion of other subject changed by: "
- DIPLO_CHANGE_EMPIRE:0 "Opinion change of other HRE members: "
+ DIPLO_CHANGE_EMPIRE:0 "Opinion change of other SE members: "
  SUBJECT_NEW_WAR:0 "$SUBJECT$ will drag $OVERLORD$ into war with $LIST$."
  SUBJECT_NOT_NEW_VAR:0 "$OVERLORD$ will not join the war between $SUBJECT$ and $SUBJECT_ENEMY$: $REASON$"
  PART_OF_HRE:0 "$COUNTRY|Y$ is part of the Holy Roman Empire."
