--- a/localisation/text_l_english.yml
+++ b/localisation/text_l_english.yml
@@ -3338,9 +3338,9 @@
  HRE_LEAVE_EMPEROR_SHORT:0 "The Emperor (§Y$COUNTRY$§W) will gain ownership of §Y$COUNT$§W provinces.\n"
  HRE_LEAVE_NOT_PART_OF_EMPIRE:0 "You're not a member of the empire."
  HRE_LEAVE_HAS_OVERLORD:0 "You cannot leave if you're a vassal or lesser part of a personal union."
- LEAVE_HRE_CONFIRM:0 "Leave the HRE"
+ LEAVE_HRE_CONFIRM:0 "Leave the SE"
  HRE_LEAVE_NOT_AS_EMPEROR:0 "The Emperor cannot leave the Empire!"
- HRE_LEAVE:0 "Leave HRE"
+ HRE_LEAVE:0 "Leave SE"
  GRANT_INDEPENDENCE_EFFECT:0 "$WHO$ becomes independent.\n"
  RELEASE_OUR_VASSAL:0 "Release §Y$THEM$§W from being our vassal."
  PEACE_EFFECT:0 "White Peace with §Y$THEM$§W."
@@ -4088,7 +4088,7 @@
  MOVE_CAPITAL_SHORT_COST:0 "You cannot move the capital to this province."
  MOVE_CAPITAL_LONG:0 "Moving your Capital can be advantageous, especially if it is in a vulnerable position."
  MOVE_CAPITAL_COST:0 "The cost for moving will be §Y$POWER$§!£adm ."
- HRE_DISMANTLE:0 "Dismantle HRE"
+ HRE_DISMANTLE:0 "Dismantle SE"
  YOUR_CAPITAL:0 "The capital of our country."
  CONFIRMMOVECAPITALTEXT:0 "Do you wish to move your Capital to this new location?"
  CONFIRM_CAP_COST:0 "Cost: §Y$AMOUNT$§W£adm ."
@@ -4161,8 +4161,8 @@
  HAVE_CORE_IN:0 "Have a core in "
  HAVENT_DISCOVERED:0 "Have NOT discovered "
  HAVE_DISCOVERED:0 "Have discovered "
- IS_EMPEROR:0 "Is the Emperor of the HRE"
- ISNT_EMPEROR:0 "Is NOT the Emperor of the HRE"
+ IS_EMPEROR:0 "Is the Emperor of the SE"
+ ISNT_EMPEROR:0 "Is NOT the Emperor of the SE"
  IS_CELESTIAL_EMPEROR:0 "Is the Emperor of China"
  ISNT_CELESTIAL_EMPEROR:0 "Is NOT the Emperor of China"
  ISNT_ELECTOR:0 "Is NOT an Elector"
@@ -4336,10 +4336,10 @@
  AVERAGE_EFFECTIVE_REVOLT_RISK_HIGHER_THAN:3 "Average Unrest in Provinces where there is Unrest is at least $NUMBER|Y$ (Current: $CURRENT$)"
  AVERAGE_REVOLT_RISK_LOWER_THAN:1 "Average Unrest lower than $NUMBER|Y$ (Current: $CURRENT$)"
  AVERAGE_REVOLT_RISK_HIGHER_THAN:1 "Average Unrest at least $NUMBER|Y$ (Current: $CURRENT$)"
- IS_NOT_PART_OF_HRE:0 "Is NOT part of the HRE"
- IS_PART_OF_HRE:0 "Is part of the HRE"
- PROVINCE_IS_PART_OF_HRE:0 "$PROVINCENAME$ is part of the HRE"
- PROVINCE_IS_NOT_PART_OF_HRE:0 "$PROVINCENAME$ is NOT part of the HRE"
+ IS_NOT_PART_OF_HRE:0 "Is NOT part of the SE"
+ IS_PART_OF_HRE:0 "Is part of the SE"
+ PROVINCE_IS_PART_OF_HRE:0 "$PROVINCENAME$ is part of the SE"
+ PROVINCE_IS_NOT_PART_OF_HRE:0 "$PROVINCENAME$ is NOT part of the SE"
  COLONY_SMALLER_THAN:0 "Colony population smaller than "
  COLONY_LARGER_THAN:0 "Colony population at least "
  ADVISOR_HAS_LOWER_THAN:0 "$ADVISORTYPE$ advisor has lower skill than "
@@ -4622,10 +4622,10 @@
  return_unlawful_territory_desc:0 "By the constitution of the Saelian Empire, this province is considered unlawfully held."
  powerful_noble:0 "Powerful Noble"
  desc_powerful_noble:0 "A local powerful noble has gained control over this province, with almost full autonomy."
- member_in_hre:0 "Member of HRE"
+ member_in_hre:0 "Member of SE"
  free_city_in_hre:0 "Imperial Free City"
- HRE_IS_LESS_THAN:0 "Less than §Y$SIZE$§! members of HRE.\n"
- HRE_IS_AT_LEAST:0 "At least §Y$SIZE$§! members of HRE.\n"
+ HRE_IS_LESS_THAN:0 "Less than §Y$SIZE$§! members of SE.\n"
+ HRE_IS_AT_LEAST:0 "At least §Y$SIZE$§! members of SE.\n"
  LEVEL_WITH:0 "Weight With"
  RMN:0 "Romania"
  RMN_ADJ:0 "Romanian"
@@ -5344,7 +5344,7 @@
  HAS_NO_PORTS:0 "$COUNTRY$ has no ports."
  WE_HAVE_NO_PORTS:0 "We have no ports."
  ARMIES_IN:0 "Armies in"
- ANY_ELECTOR_STARTS:0 "Any HRE Elector"
+ ANY_ELECTOR_STARTS:0 "Any SE Elector"
  THE_CAPITAL_IS:0 "The capital is "
  THE_CAPITAL_IS_NOT:0 "The capital is not "
  restore_byzantine_empire_title:0 "Restore the Byzantine Empire"
@@ -6998,7 +6998,7 @@
  IS_CRUSADE_TARGET:0 "Is the target of a Crusade"
  CV_RULEDBY:0 "$NAME$ $SURNAME$"
  DIPRELCH_SAMEDYNASTY:0 "Same Dynasty"
- DIPRELCH_BANNED:0 "Banned by the HRE"
+ DIPRELCH_BANNED:0 "Banned by the SE"
  HEIR:0 "Heir"
  PRONOUN_HIS:0 "his"
  PRONOUN_HER:0 "her"
@@ -7122,8 +7122,8 @@
  NEW_CARDINAL_EXPL:0 "$NEW$ is pulling his strings."
  NEW_CARDINAL_EXPL_OURS:0 "He is loyal to us, though the arrangement cost us some Papal Influence."
  HRE_INFLUENCE_DESC:1 "Imperial Authority represents the amount of control the Emperor exerts over the Princes of the Empire. Authority is needed to enact reform decisions within the Saelian Empire. A high Authority may inspire more nations to join the Empire."
- HRE_INFLUENCE_GAIN:1 "Gained by:\n - Having a large amount of member states\n - The member states being at peace\n - Countries joining the Empire\n - Successive Emperors from the same country\n - Emperor voting with the majority of princes in HRE incidents"
- HRE_INFLUENCE_LOSS:1 "Lost by:\n - Dishonoring the Calls of members\n - Provinces leaving the Empire\n - Imperial territory under the control of foreign states\n - Imperial territory under the control of heathens and heretics\n - Having less than 4 electors\n - Emperor voting with the minority of princes in HRE incidents"
+ HRE_INFLUENCE_GAIN:1 "Gained by:\n - Having a large amount of member states\n - The member states being at peace\n - Countries joining the Empire\n - Successive Emperors from the same country\n - Emperor voting with the majority of princes in SE incidents"
+ HRE_INFLUENCE_LOSS:1 "Lost by:\n - Dishonoring the Calls of members\n - Provinces leaving the Empire\n - Imperial territory under the control of foreign states\n - Imperial territory under the control of heathens and heretics\n - Having less than 4 electors\n - Emperor voting with the minority of princes in SE incidents"
  PAPAL_INF_LESS_THAN:0 "Episcopal Influence less than"
  PAPAL_INF_AT_LEAST:0 "Episcopal Influence at least"
  INVESTED_PAPAL_INF_LESS_THAN:0 "Invested Papal Influence less than"
@@ -7188,7 +7188,7 @@
  CARDINAL_CHANCE:0 "Cardinal Chance"
  NAVAL_LABEL:0 "Naval Tradition:"
  ARMY_LABEL:0 "Army Tradition:"
- HRE_MAJORITY:0 "Most HRE Members"
+ HRE_MAJORITY:0 "Most SE Members"
  ICON_RELIGIOUS_UNITY:0 "A demand for §YReligious Unity§W"
  BORN_IN:0 "Born in $COUNTRY$."
  HAD_COUNTRY_FLAG_LESS_THAN:1 "Had country flag '§Y$FLAG$§W' for less than §Y$DAYS$§W days (Current: $CURRENT|Y$)"
@@ -7207,7 +7207,7 @@
  reichsregiment_desc:0 "Consolidate the Imperial Diet, and reduce the legislative complexity."
  reichsregiment_province:0 "Reichsregiment"
  gemeinerpfennig_title:0 "Enact Gemeiner Pfennig"
- gemeinerpfennig_desc:0 "Require member states of the HRE to levy a special tax to be paid directly to the Emperor."
+ gemeinerpfennig_desc:0 "Require member states of the SE to levy a special tax to be paid directly to the Emperor."
  hofgericht_title:0 "Reform the Hofgericht"
  hofgericht_desc:0 "Reduce legislative independence by making the Emperor the final legal authority within the Empire."
  landfriede_title:0 "Ewiger Landfriede"
@@ -7264,17 +7264,17 @@
  HLR_ADJ:0 "Imperial"
  CARDINAL_CHANCE_INSTANT:0 "There's a §Y$CHANCE$%§W chance that you will get the next cardinal."
  CARDINAL_CHANCE_DELAYED:0 "You have §G$PROVINCES$§W Catholic provinces and a Papal influence of §G$INFLUENCE$%§W. The chance is also modified by the tax in each province."
- HRE_MEMBERS:0 "HRE Members"
+ HRE_MEMBERS:0 "SE Members"
  HRE_EMPEROR:0 "The Saelian Empire"
- HRE_MEMBER_HAS_NOT_MODIFIER:0 "HRE Members do not have the modifier "
- HRE_MEMBER_HAS_MODIFIER:0 "HRE Members have the modifier "
- HRE_EMPEROR_HAS_NOT_MODIFIER:0 "The HRE does not have the modifier "
- HRE_EMPEROR_HAS_MODIFIER:0 "The HRE has the modifier "
+ HRE_MEMBER_HAS_NOT_MODIFIER:0 "SE Members do not have the modifier "
+ HRE_MEMBER_HAS_MODIFIER:0 "SE Members have the modifier "
+ HRE_EMPEROR_HAS_NOT_MODIFIER:0 "The SE does not have the modifier "
+ HRE_EMPEROR_HAS_MODIFIER:0 "The SE has the modifier "
  VASSALIZE:0 "Vassalize $WHO$.\n"
  grand_marshal:0 "Grand Marshal"
  grand_marshal_desc:0 "A skilled Grand Marshal enhances the legitimacy of the royal family by ensuring that their majesty and glory are known by all and sundry."
- HRE_INTERNAL_CB_ENABLED:0 "Allow Internal HRE Wars"
- HRE_INTERNAL_CB_DISABLED:0 "Disallow Internal HRE Wars"
+ HRE_INTERNAL_CB_ENABLED:0 "Allow Internal SE Wars"
+ HRE_INTERNAL_CB_DISABLED:0 "Disallow Internal SE Wars"
  HRE_IMPERIAL_BAN_ENABLED:0 "Gives casus belli on non-members holding Imperial territory."
  HRE_IMPERIAL_BAN_DISABLED:0 "No longer gives casus belli on non-members holding Imperial territory."
  HRE_IMPERIAL_BAN_IS_ENABLED:0 "Emperor has CB on occupiers of the Empire"
@@ -7593,7 +7593,7 @@
  ALL_CGROUP_PROVS:0 "All Provinces in our Culture Group"
  ALL_ADJ_COLONIES:0 "All Adjacent Colonies"
  ALL_REL_PROVS:0 "All Provinces of our Religion"
- ALL_HRE_PROVS:0 "All HRE Provinces"
+ ALL_HRE_PROVS:0 "All SE Provinces"
  ALL_CGROUP_COUNTRIES:0 "All Countries with Provinces of our Culture Group"
  ALL_COUNTRIES:0 "All Countries"
  ALL_GOV_ENEMIES:0 "All Revolutionary Enemies"
@@ -7936,7 +7936,7 @@
  ND_CLIMATE:0 "Climate: §Y$VAL$§!"
  ND_TECH_GROUP_DESC:0 "This cost is calculated from the number of institutions you will receive at the start relative to your surroundings."
  ND_POINTS_COST:0 "Points Cost: §Y$VAL$§!"
- ND_POINTS_COST_HRE:0 "Points Cost: §Y$VAL$§! (of which §Y$EXTRA$§! due to HRE capital)"
+ ND_POINTS_COST_HRE:0 "Points Cost: §Y$VAL$§! (of which §Y$EXTRA$§! due to SE capital)"
  ND_PROVINCE_CULTURE:0 "Culture: §Y$NAME$§!"
  ND_SELECT_CULTURE:0 "Select Culture"
  ND_SELECT_RELIGION:0 "Select Religion"
